sentry3/clickhouse/statefulset-clickhouse.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sentry-clickhouse
  labels:
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/instance: sentry
spec:
  replicas: 3
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  serviceName: sentry-clickhouse-headless
  selector:
    matchLabels:
      app.kubernetes.io/name: clickhouse
      app.kubernetes.io/instance: sentry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: clickhouse
        app.kubernetes.io/instance: sentry
    spec:
      containers:
      - name: sentry-clickhouse
        image: yandex/clickhouse-server:21.8.13.6
        imagePullPolicy: IfNotPresent
        command:
          - /bin/bash
          - -c
          - export SHARD=${HOSTNAME##*-} && /entrypoint.sh
        ports:
        - name: http-port
          containerPort: 8123
        - name: tcp-port
          containerPort: 9000
        - name: inter-http-port
          containerPort: 9009
        livenessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        volumeMounts:
        - name: sentry-clickhouse-data
          mountPath: /var/lib/clickhouse
        - name: sentry-clickhouse-logs
          mountPath: /var/log/clickhouse-server
        - name: init-config
          mountPath: /etc/clickhouse-server/
        - name: sentry-clickhouse-users
          mountPath: /etc/clickhouse-server/users.d
      volumes:
      # - name: sentry-clickhouse-data
      #   persistentVolumeClaim:
      #     claimName: sentry-clickhouse-data
      - name: sentry-clickhouse-data
        emptyDir: {}
      - name: sentry-clickhouse-logs
        emptyDir: {}
      - name: sentry-clickhouse-config
        configMap:
          name: sentry-clickhouse-config
          defaultMode: 0666
          items:
          - key: config.xml
            path: config.xml
      - name: init-config
        emptyDir: {}
      - name: sentry-clickhouse-metrica
        configMap:
          name: sentry-clickhouse-metrica
          defaultMode: 0666
          items:
          - key: metrica.xml
            path: metrica.xml
      - name: sentry-clickhouse-users
        configMap:
          name: sentry-clickhouse-users
          items:
          - key: users.xml
            path: users.xml
  # volumeClaimTemplates:
  # - metadata:
  #     name: sentry-clickhouse-data
  #     labels:
  #       app.kubernetes.io/name: clickhouse-data
  #       app.kubernetes.io/instance: sentry-data
  #   spec:
  #     accessModes:
  #     - "ReadWriteOnce"
  #     resources:
  #       requests:
  #         storage: "20Gi"
