sentry3/clickhouse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentry-clickhouse
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - clickhouse.dev.compliantcloud.com
      secretName: sentry-clickhouse
  rules:
    - host: clickhouse.dev.compliantcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentry-clickhouse
                port:
                  number: 8123
